--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,5 +9,14 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- <div class="kubik">
+      <script
+        type="module"
+        src="https://unpkg.com/@splinetool/viewer@1.3.5/build/spline-viewer.js"
+      ></script>
+      <spline-viewer
+        url="https://prod.spline.design/q3JZ-541i3VYuBbM/scene.splinecode"
+      ></spline-viewer>
+    </div> -->
   </body>
 </html>
